Fix pageheader alignment

--- a/styles/pageheader.module.less
+++ b/styles/pageheader.module.less
@@ -1,6 +1,8 @@
 @import './variables.module.less';
 
 .header {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 60px;
   padding: 16px;
@@ -9,7 +11,7 @@
 
   .title {
     display: inline;
-    margin-right: 8px;
+    margin: 0 8px;
     vertical-align: initial;
     font-size: 20px;
     line-height: 28px;
